[gd_scene load_steps=18 format=3 uid="uid://60upqoj4qxx5"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_2sra7"]
[ext_resource type="Texture2D" uid="uid://ubetet6hpump" path="res://assets/ui/start_backround.png" id="1_i4b48"]
[ext_resource type="Texture2D" uid="uid://df1sopt8bhuup" path="res://assets/ui/tutorial.png" id="2_4q6pv"]
[ext_resource type="Texture2D" uid="uid://dw4sj604eu6v4" path="res://assets/ui/start_BUTTON.png" id="2_5wi32"]
[ext_resource type="Texture2D" uid="uid://b2vwbjpn1q647" path="res://assets/ui/SETtings.png" id="3_d0tij"]
[ext_resource type="Texture2D" uid="uid://ch3lxuo2j8xcm" path="res://assets/ui/CREDITS_button.png" id="4_1ovij"]
[ext_resource type="Texture2D" uid="uid://dfevtjsg1myvb" path="res://assets/ui/summer survival.png" id="5_mcvjw"]
[ext_resource type="Texture2D" uid="uid://cmuu0g6hrlpo1" path="res://assets/ui/volume_text_backround.png" id="8_hqyms"]
[ext_resource type="Texture2D" uid="uid://boqcjpbnbkdoc" path="res://assets/ui/volumeslider_button.png" id="9_chdaf"]
[ext_resource type="Texture2D" uid="uid://h13fu8acbaht" path="res://assets/ui/volumeslider.png" id="9_pvdeg"]
[ext_resource type="Texture2D" uid="uid://xu1yy2hqin86" path="res://assets/ui/CREDITS.png" id="11_l46s5"]
[ext_resource type="Texture2D" uid="uid://hw85jogullr7" path="res://assets/ui/back_button.png" id="12_f0n8o"]

[sub_resource type="ImageTexture" id="ImageTexture_i3nwt"]

[sub_resource type="ImageTexture" id="ImageTexture_820if"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sm0q6"]
texture = ExtResource("9_pvdeg")
texture_margin_left = 36.0
texture_margin_top = 25.0
texture_margin_right = 45.0
texture_margin_bottom = 38.0
expand_margin_left = 39.0
expand_margin_top = 37.0
expand_margin_right = 48.0
expand_margin_bottom = 51.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_orfm3"]
texture = ExtResource("9_chdaf")
texture_margin_left = 42.0
texture_margin_top = 40.0
texture_margin_right = 47.0
texture_margin_bottom = 42.0

[sub_resource type="LabelSettings" id="LabelSettings_7thlj"]
font_size = 26
font_color = Color(0, 0.00392157, 0.0235294, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sra7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_i4b48")
expand_mode = 5

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -130.0
offset_right = 1092.0
offset_bottom = 625.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.295, 0.295)
texture_normal = ExtResource("2_5wi32")

[node name="TutorialButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -486.0
offset_top = 119.0
offset_right = 608.0
offset_bottom = 683.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.275, 0.275)
texture_normal = ExtResource("2_4q6pv")

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = 108.0
offset_right = 1252.0
offset_bottom = 984.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.215, 0.215)
texture_normal = ExtResource("3_d0tij")

[node name="CreditsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 196.0
offset_top = 114.0
offset_right = 2612.0
offset_bottom = 1516.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.125, 0.125)
texture_normal = ExtResource("4_1ovij")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 46.0
offset_right = 2926.0
offset_bottom = 432.0
scale = Vector2(0.34, 0.34)
texture = ExtResource("5_mcvjw")

[node name="Settings" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="SettingsBackground" type="TextureRect" parent="Settings"]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_hqyms")

[node name="VolumeSlider" type="HSlider" parent="Settings"]
layout_mode = 0
offset_left = 235.0
offset_top = 340.0
offset_right = 912.0
offset_bottom = 421.0
theme_override_icons/grabber = SubResource("ImageTexture_i3nwt")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_820if")
theme_override_styles/slider = SubResource("StyleBoxTexture_sm0q6")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_orfm3")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_orfm3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SettingsCloseButton" type="TextureButton" parent="Settings"]
layout_mode = 0
offset_left = 46.0
offset_top = 480.0
offset_right = 1324.0
offset_bottom = 1235.0
scale = Vector2(0.09, 0.09)
texture_normal = ExtResource("12_f0n8o")

[node name="Credits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Credits"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("11_l46s5")

[node name="CreditsCloseButton" type="TextureButton" parent="Credits"]
layout_mode = 0
offset_left = 46.0
offset_top = 480.0
offset_right = 2279.0
offset_bottom = 1805.0
scale = Vector2(0.09, 0.09)
texture_normal = ExtResource("12_f0n8o")

[node name="Tutorial" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Tutorial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1112.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_i4b48")
expand_mode = 5

[node name="TutorialCloseButton" type="TextureButton" parent="Tutorial"]
layout_mode = 0
offset_left = 46.0
offset_top = 480.0
offset_right = 2279.0
offset_bottom = 1805.0
scale = Vector2(0.09, 0.09)
texture_normal = ExtResource("12_f0n8o")

[node name="Label" type="Label" parent="Tutorial"]
layout_mode = 0
offset_left = 99.0
offset_top = 124.0
offset_right = 1061.0
offset_bottom = 433.0
text = "Kill mosquitoes by clicking on them OR swap adjacent tiles to make matches

Matches with icons charge power-ups:
- The bug spray makes your clicks more DEADLY ðŸ’€
- The bug zapper attracts and kills mosquitoes âš¡

Matches of 4 or more tiles charge THE FLAMETHROWER! ðŸ”¥"
label_settings = SubResource("LabelSettings_7thlj")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="value_changed" from="Settings/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="Settings/SettingsCloseButton" to="." method="_on_settings_close_button_pressed"]
[connection signal="pressed" from="Credits/CreditsCloseButton" to="." method="_on_credits_close_button_pressed"]
[connection signal="pressed" from="Tutorial/TutorialCloseButton" to="." method="_on_tutorial_close_button_pressed"]
